frontend-app/scripts/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-app-service
  name: frontend-app-service
spec:   
  selector:
    app: frontend-app-service
  type: NodePort
  ports:
   - port: 8080
